# xai-evaluation-overview

./: .gitignore  AGENTS.md  Makefile  README.md  index.html  pyproject.toml  styles.css
content/: site.schema.json  site.yaml
docs/: tooling.md
notebooks/: 00_template_notebook.ipynb
scripts/: build_site.py
src/repo_name/: __init__.py  paths.py  plotting.py
tests/: test_paths.py  test_static_site.py
