[project]
name = "repo-name"
version = "0.1.0"
description = "A minimal Python research and development template."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "pre-commit",
  "ruff",
  "ipykernel",
  "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/repo_name"]

[tool.ruff]
line-length = 100
target-version = "py312"
