[project]
name = "xai-evaluation-overview"
version = "0.1.0"
description = "Static GitHub Pages research overview for time-series XAI evaluation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "ruff",
  "pytest",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
